Code changes to separate server and client

--- a/pattern.html
+++ b/pattern.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link href="styles/style.css" rel="stylesheet" />
-    <script src="scripts/main.js" defer></script>
+    <script src="scripts/pattern.js" defer></script>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
     <title>My App</title>
   </head>
