Fix redirect urls

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link href="styles/style.css" rel="stylesheet" />
+    <script src="scripts/util.js" defer></script>
     <script src="scripts/index.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
     <title>My App</title>
