--- a/pattern.html
+++ b/pattern.html
@@ -15,7 +15,7 @@
       <nav>
         <ul>
           <li class="current-page"><a href="patterns-list.html">&lt; My Patterns</a></li>
-          <li><a href="/logout">Logout</a></li>
+          <li><button onclick="logout()">Logout</button></li>
         </ul>
       </nav>
     </header>
