--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link href="styles/style.css" rel="stylesheet" />
-    <script src="scripts/util.js"></script>
-    <script src="scripts/index.js"></script>
+    <script src="scripts/util.js" defer></script>
+    <script src="scripts/index.js" defer></script>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
     <title>My App</title>
   </head>
@@ -13,9 +13,9 @@
     <header>
       <h1>My Pattern Tracker</h1>
       <nav>
-        <ul>
+        <ul >
           <li><a href="patterns-list.html">My Patterns</a></li>
-          <li><a href="/logout">Logout</a></li>
+          <li><button onclick="logout()" >Logout</button></li>
         </ul>
       </nav>
     </header>
