--- a/template.html
+++ b/template.html
@@ -14,7 +14,7 @@
       <nav>
         <ul>
           <li><a href="patterns-list.html">My Patterns</a></li>
-          <li><a href="/logout">Logout</a></li>
+          <li><button onclick="logout()">Logout</button></li>
         </ul>
       </nav>
     </header>
